// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test button group color and text-color 1`] = `
"<div class=\\"var-button-group var--box var-button-group--mode-normal var-button-group--horizontal var-elevation--2\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" style=\\"color: red; background: yellow;\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" style=\\"color: red; background: yellow;\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" style=\\"color: red; background: yellow;\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button></div>"
`;

exports[`test button group default slots 1`] = `
"<div class=\\"var-button-group var--box var-button-group--mode-normal var-button-group--horizontal var-elevation--2\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button></div>"
`;

exports[`test button group elevation 1`] = `
"<div class=\\"var-button-group var--box var-button-group--mode-normal var-button-group--horizontal var-elevation--10\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button></div>"
`;

exports[`test button group outline mode 1`] = `
"<div class=\\"var-button-group var--box var-button-group--mode-outline var-button-group--horizontal\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--outline\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--outline\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--outline\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button></div>"
`;

exports[`test button group text mode 1`] = `
"<div class=\\"var-button-group var--box var-button-group--mode-text var-button-group--horizontal\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button></div>"
`;

exports[`test button group type and size 1`] = `
"<div class=\\"var-button-group var--box var-button-group--mode-normal var-button-group--horizontal var-elevation--2\\"><button class=\\"var-button var--box var-button--large var--inline-flex var-button--primary var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--large var--inline-flex var-button--primary var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button><button class=\\"var-button var--box var-button--large var--inline-flex var-button--primary var-elevation--0\\" type=\\"button\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"></div>
    <div class=\\"var-button__overlay\\"></div>
  </button></div>"
`;
